--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxthq/ui": "^2.5.0",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@types/node": "^18.16.19",
-    "eslint": "^8.45.0",
-    "nuxt": "^3.6.2",
-    "sass": "^1.63.6"
+    "@nuxt/devtools": "^0.8.3",
+    "@nuxt/ui": "^2.8.1",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@types/node": "^20.6.2",
+    "eslint": "^8.49.0",
+    "nuxt": "^3.7.3",
+    "sass": "^1.67.0"
   }
 }
